# TodayHIT

./: .gitignore  README.md  pyproject.toml  restart.sh  scheduled_restart.sh  scrape_local.py  scraped_data.json  start.bat
docs/: qq-commands.md  source-code.md
docs/superpowers/plans/: 2026-05-10-todayhit-qqbot.md
docs/superpowers/specs/: 2026-05-10-todayhit-qqbot-design.md
plugins/today_help/: __init__.py
plugins/today_scraper/: __init__.py  commands.py  config.py  models.py  pusher.py  scraper.py  search.py
scripts/: full_scrape.py
tests/: test_commands.py  test_models.py  test_pusher.py  test_scraper.py  verify_real_site.py
