[project]
name = "todayhit-qqbot"
version = "0.1.0"
description = "今日哈工大 QQ 机器人"
requires-python = ">=3.12"
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "peewee>=3.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
